fix: affix visible on ios

--- a/templates/modern/src/layout.scss
+++ b/templates/modern/src/layout.scss
@@ -191,7 +191,7 @@ body[data-layout="landing"] {
 
           @include stick-to-header;
 
-          @media only screen and (width <= 1140px) {
+          @media only screen and (max-width: 1140px) {
             display: none;
           }
         }
